--- a/kelas 10/Video/index.html
+++ b/kelas 10/Video/index.html
@@ -19,13 +19,20 @@
   <meta property="og:type" content="website">
 
 
+  <style>
+   img{ /* saya kecilkan karena terlalu besar gambarnya */
+     width: 30%;
+     height: 30%;
+   }
+  </style>
+
   <title>Web Sekolah</title>
   
 </head>
 
 <body>
   
-  <img src="" alt="logo">
+  <img src="assets/logo.png" alt="logo">
   
   <ul>
     <li>About Us</li>
