--- a/kelas 10/Video/index.html
+++ b/kelas 10/Video/index.html
@@ -130,12 +130,32 @@
   </table>
   <br/>
 </section>
+
+<section>
+  <h1>TAMBAHAN</h1>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia, explicabo dolores. Quia ipsum provident tempora, quis, minus nihil impedit quae architecto accusantium perferendis dignissimos, quam repudiandae incidunt itaque nemo necessitatibus?</p>
+</section>
+
+<section>
+  <h1>TAMBAHAN</h1>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum rem quas, ut inventore! Enim ea perspiciatis laborum, sed ipsa tempora sit minima animi dicta nam aliquid nesciunt, facilis ipsum itaque!</p>
+</section>
+
+<section>
+  <h1>TAMBAHAN</h1>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum rem quas, ut inventore! Enim ea perspiciatis laborum, sed ipsa tempora sit minima animi dicta nam aliquid nesciunt, facilis ipsum itaque!</p>
+</section>
+
+<section>
+  <h1>TAMBAHAN</h1>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum rem quas, ut inventore! Enim ea perspiciatis laborum, sed ipsa tempora sit minima animi dicta nam aliquid nesciunt, facilis ipsum itaque!</p>
+</section>
  
- <!-- VIDEO -->
- <section id="video">
+
+ <!-- <section id="video">
    <video src="assets/BMW.mp4" controls=""></video>
  </section>
- 
+  
  <section id="audio">
    <audio src="assets/marsSmenda.mp3" controls></audio>
  </section>
@@ -145,7 +165,9 @@
      
    </canvas>
  </section>
- 
+  -->
+  
+  
 <footer>
   
  <!-- Form -->
